name-list: fix wrapping of podcaster list in document-edit

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -980,9 +980,6 @@ nav li > input[type="checkbox"] {
 	width: auto;
 	min-width: 7em;
 }
-.namelist span {
-	white-space: nowrap;
-}
 .namelist a {
 	display: inline-block;
 	vertical-align: middle;
